; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_test_header_nread_value.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_test_header_nread_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@HTTP_REQUEST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"GET / HTTP/1.1\0D\0Aheader: value\0Ahdr: value\0D\0A\00", align 1
@settings_null = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_header_nread_value() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = load i32, i32* @HTTP_REQUEST, align 4
  %5 = call i32 @http_parser_init(%struct.TYPE_4__* %1, i32 %4)
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i64 @strlen(i8* %7)
  %9 = call i64 @http_parser_execute(%struct.TYPE_4__* %1, i32* @settings_null, i8* %6, i64 %8)
  store i64 %9, i64* %2, align 8
  %10 = load i64, i64* %2, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i64 @strlen(i8* %11)
  %13 = icmp eq i64 %10, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i8*, i8** %3, align 8
  %19 = call i64 @strlen(i8* %18)
  %20 = icmp eq i64 %17, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  ret void
}

declare dso_local i32 @http_parser_init(%struct.TYPE_4__*, i32) #1

declare dso_local i64 @http_parser_execute(%struct.TYPE_4__*, i32*, i8*, i64) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
